# CinemaTickets

./: .gitignore  CMakeLists.txt  README.md  workbook.xlsx
include/: boxoffice.h  movie.h  normal.h  reduced.h  registry.h  room.h  screening.h  seat.h  ticket.h  workbookmanager.h
src/: boxoffice.cpp  main.cpp  movie.cpp  normal.cpp  reduced.cpp  registry.cpp  room.cpp  screening.cpp  seat.cpp  ticket.cpp  workbookmanager.cpp
test/: TestBoxOffice.cpp  TestTickets.cpp  TestWorkbookManager.cpp
